force-app/main/default/objects/Request_for_Quote__c/Request_for_Quote__c.object-meta.xml
<CustomObject>
    <label>Request for Quote</label>
    <nameField>
        <label>RFQ Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Request for Quote</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>