force-app/main/default/objects/Request_for_Quote__c/fields/Additional_Markup__c.field-meta.xml
<CustomField>
    <fullName>Additional_Markup__c</fullName>
    <label>Additional Markup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>