force-app/main/default/objects/Request_for_Quote__c/fields/Adhesive__c.field-meta.xml
<CustomField>
    <fullName>Adhesive__c</fullName>
    <label>Adhesive</label>
    <length>255</length>
    <type>Text</type>
</CustomField>