force-app/main/default/objects/Request_for_Quote__c/fields/Amortize_Version_Changes_into_Price__c.field-meta.xml
<CustomField>
    <fullName>Amortize_Version_Changes_into_Price__c</fullName>
    <label>Amortize Version Changes into Price</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N</valueSetName>
    </valueSet>
</CustomField>