force-app/main/default/objects/Request_for_Quote__c/fields/Application_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Application_Conditions__c</fullName>
    <label>Application Conditions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>