force-app/main/default/objects/Request_for_Quote__c/fields/Application_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Application_Temperature__c</fullName>
    <label>Application Temperature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>