force-app/main/default/objects/Request_for_Quote__c/fields/Applied_To__c.field-meta.xml
<CustomField>
    <fullName>Applied_To__c</fullName>
    <label>Applied To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>