force-app/main/default/objects/Request_for_Quote__c/fields/Are_We_Handling_Filling__c.field-meta.xml
<CustomField>
    <fullName>Are_We_Handling_Filling__c</fullName>
    <label>Are We Handling Filling?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N</valueSetName>
    </valueSet>
</CustomField>