force-app/main/default/objects/Request_for_Quote__c/fields/Bags_or_Pouches__c.field-meta.xml
<CustomField>
    <fullName>Bags_or_Pouches__c</fullName>
    <label>Bags or Pouches</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bags</fullName>
            </value>
            <value>
                <fullName>Pouches</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>