force-app/main/default/objects/Request_for_Quote__c/fields/Child_Resistant_Pouch__c.field-meta.xml
<CustomField>
    <fullName>Child_Resistant_Pouch__c</fullName>
    <label>Child Resistant Pouch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N</valueSetName>
    </valueSet>
</CustomField>