force-app/main/default/objects/Request_for_Quote__c/fields/Compliance_Information__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Information__c</fullName>
    <label>Compliance Information</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Food Packaging</fullName>
            </value>
            <value>
                <fullName>Personal Care Item</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>