force-app/main/default/objects/Request_for_Quote__c/fields/Compliance_Regulations__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Regulations__c</fullName>
    <label>Compliance Regulations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SQF</fullName>
            </value>
            <value>
                <fullName>HACCP</fullName>
            </value>
            <value>
                <fullName>ISO</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>