force-app/main/default/objects/Request_for_Quote__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Request for Quote</relationshipLabel>
    <relationshipName>Request_for_Quote</relationshipName>
    <type>Lookup</type>
</CustomField>