force-app/main/default/objects/Request_for_Quote__c/fields/Container_Color__c.field-meta.xml
<CustomField>
    <fullName>Container_Color__c</fullName>
    <inlineHelpText>What color is the container to which the label is being applied.</inlineHelpText>
    <label>Application Container Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>