force-app/main/default/objects/Request_for_Quote__c/fields/Container_Description__c.field-meta.xml
<CustomField>
    <fullName>Container_Description__c</fullName>
    <label>Container Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Glass</fullName>
            </value>
            <value>
                <fullName>PET</fullName>
            </value>
            <value>
                <fullName>HDPE</fullName>
            </value>
            <value>
                <fullName>Aluminum</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>