force-app/main/default/objects/Request_for_Quote__c/fields/Container_Shape__c.field-meta.xml
<CustomField>
    <fullName>Container_Shape__c</fullName>
    <label>Container Shape</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Uniform</fullName>
            </value>
            <value>
                <fullName>Non-Uniform</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>