force-app/main/default/objects/Request_for_Quote__c/fields/Contents__c.field-meta.xml
<CustomField>
    <fullName>Contents__c</fullName>
    <label>Contents</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Liquid</fullName>
            </value>
            <value>
                <fullName>Powder</fullName>
            </value>
            <value>
                <fullName>Solid</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>