force-app/main/default/objects/Request_for_Quote__c/fields/Converter_if_known__c.field-meta.xml
<CustomField>
    <fullName>Converter_if_known__c</fullName>
    <label>Converter (if known)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>