force-app/main/default/objects/Request_for_Quote__c/fields/Converting__c.field-meta.xml
<CustomField>
    <fullName>Converting__c</fullName>
    <label>Converting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stand Up Pouch</fullName>
            </value>
            <value>
                <fullName>Gusseted Bag</fullName>
            </value>
            <value>
                <fullName>Side Seal</fullName>
            </value>
            <value>
                <fullName>Fin Seal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>