force-app/main/default/objects/Request_for_Quote__c/fields/Converting_Details__c.field-meta.xml
<CustomField>
    <fullName>Converting_Details__c</fullName>
    <label>Converting Details</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard Zipper</fullName>
            </value>
            <value>
                <fullName>Tear Notch</fullName>
            </value>
            <value>
                <fullName>K-Seal</fullName>
            </value>
            <value>
                <fullName>Doyen Seal</fullName>
            </value>
            <value>
                <fullName>Skirt Seal</fullName>
            </value>
            <value>
                <fullName>Side guesset</fullName>
            </value>
            <value>
                <fullName>Bottom Gusset</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>