force-app/main/default/objects/Request_for_Quote__c/fields/Converting_Other__c.field-meta.xml
<CustomField>
    <fullName>Converting_Other__c</fullName>
    <label>Converting Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>