force-app/main/default/objects/Request_for_Quote__c/fields/Core_ID__c.field-meta.xml
<CustomField>
    <fullName>Core_ID__c</fullName>
    <label>Core ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>