force-app/main/default/objects/Request_for_Quote__c/fields/Core_Size__c.field-meta.xml
<CustomField>
    <fullName>Core_Size__c</fullName>
    <label>Core Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>