force-app/main/default/objects/Request_for_Quote__c/fields/Corner_Radius__c.field-meta.xml
<CustomField>
    <fullName>Corner_Radius__c</fullName>
    <label>Corner Radius</label>
    <length>255</length>
    <type>Text</type>
</CustomField>