force-app/main/default/objects/Request_for_Quote__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <formula>Opportunity__r.Account.Name</formula>
    <label>Customer</label>
    <type>Text</type>
</CustomField>