force-app/main/default/objects/Request_for_Quote__c/fields/Cut_Length__c.field-meta.xml
<CustomField>
    <fullName>Cut_Length__c</fullName>
    <label>Cut Length (mm)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>