force-app/main/default/objects/Request_for_Quote__c/fields/Cutoff_repeat__c.field-meta.xml
<CustomField>
    <fullName>Cutoff_repeat__c</fullName>
    <label>Cutoff (repeat)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>