force-app/main/default/objects/Request_for_Quote__c/fields/Date_Time_Complete__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Complete__c</fullName>
    <label>Date/Time Complete</label>
    <type>DateTime</type>
</CustomField>