force-app/main/default/objects/Request_for_Quote__c/fields/DoubleCut__c.field-meta.xml
<CustomField>
    <fullName>DoubleCut__c</fullName>
    <label>DoubleCut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N</valueSetName>
    </valueSet>
</CustomField>