force-app/main/default/objects/Request_for_Quote__c/fields/Elaborate_on_Regulations__c.field-meta.xml
<CustomField>
    <fullName>Elaborate_on_Regulations__c</fullName>
    <label>Elaborate on Regulations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>