force-app/main/default/objects/Request_for_Quote__c/fields/Email_Quote_To__c.field-meta.xml
<CustomField>
    <fullName>Email_Quote_To__c</fullName>
    <label>Email Quote To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Sales / CS</fullName>
            </value>
            <value>
                <fullName>Sales / CS / Customer</fullName>
            </value>
            <value>
                <fullName>Sales Person / CS</fullName>
                <isActive>false</isActive>
                <label>Sales Person / CS</label>
            </value>
            <value>
                <fullName>Sales Person / CS / Customer</fullName>
                <isActive>false</isActive>
                <label>Sales Person / CS / Customer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>