force-app/main/default/objects/Request_for_Quote__c/fields/Estimator__c.field-meta.xml
<CustomField>
    <fullName>Estimator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Estimator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Request_for_Quote</relationshipName>
    <type>Lookup</type>
</CustomField>