force-app/main/default/objects/Request_for_Quote__c/fields/Expected_Annual_Volume__c.field-meta.xml
<CustomField>
    <fullName>Expected_Annual_Volume__c</fullName>
    <label>Expected Annual Volume</label>
    <length>255</length>
    <type>Text</type>
</CustomField>