force-app/main/default/objects/Request_for_Quote__c/fields/Expected_of_version_changes__c.field-meta.xml
<CustomField>
    <fullName>Expected_of_version_changes__c</fullName>
    <label>Expected # of version changes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>