force-app/main/default/objects/Request_for_Quote__c/fields/Exposure_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Exposure_Conditions__c</fullName>
    <label>Exposure Conditions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>