force-app/main/default/objects/Request_for_Quote__c/fields/Fill_Weight__c.field-meta.xml
<CustomField>
    <fullName>Fill_Weight__c</fullName>
    <label>Fill Weight</label>
    <length>255</length>
    <type>Text</type>
</CustomField>