force-app/main/default/objects/Request_for_Quote__c/fields/Filling_Process__c.field-meta.xml
<CustomField>
    <fullName>Filling_Process__c</fullName>
    <label>Filling Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Hand Fill</fullName>
            </value>
            <value>
                <fullName>Vertical Fill</fullName>
            </value>
            <value>
                <fullName>Horizontal Fill</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>