force-app/main/default/objects/Request_for_Quote__c/fields/Finish__c.field-meta.xml
<CustomField>
    <fullName>Finish__c</fullName>
    <label>Finish</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gloss UV</fullName>
            </value>
            <value>
                <fullName>Gloss Lam</fullName>
            </value>
            <value>
                <fullName>Imprintable Varnish</fullName>
            </value>
            <value>
                <fullName>Mar resistant</fullName>
            </value>
            <value>
                <fullName>Matte Lam</fullName>
            </value>
            <value>
                <fullName>Matte UV</fullName>
            </value>
            <value>
                <fullName>Soft Touch Varnish</fullName>
            </value>
            <value>
                <fullName>Soft Touch Laminate</fullName>
            </value>
            <value>
                <fullName>Satin Varnish</fullName>
            </value>
            <value>
                <fullName>Thermal Transfer Printable Lam. (Gloss = Standard)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Slip Varnish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>