force-app/main/default/objects/Request_for_Quote__c/fields/Finished_Pouch_Gusset__c.field-meta.xml
<CustomField>
    <fullName>Finished_Pouch_Gusset__c</fullName>
    <label>Finished Pouch Gusset (inches)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>