force-app/main/default/objects/Request_for_Quote__c/fields/Finishing__c.field-meta.xml
<CustomField>
    <fullName>Finishing__c</fullName>
    <label>Finishing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rolls</fullName>
            </value>
            <value>
                <fullName>Fanfold</fullName>
            </value>
            <value>
                <fullName>Sheets</fullName>
            </value>
            <value>
                <fullName>Cut Bands</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>