force-app/main/default/objects/Request_for_Quote__c/fields/Flexo_Tactile__c.field-meta.xml
<CustomField>
    <fullName>Flexo_Tactile__c</fullName>
    <label>Flexo Tactile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>