force-app/main/default/objects/Request_for_Quote__c/fields/Foil_Name_Color_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>Foil_Name_Color_if_applicable__c</fullName>
    <label>Foil Name / Color (if applicable)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>