force-app/main/default/objects/Request_for_Quote__c/fields/Gas_Flush__c.field-meta.xml
<CustomField>
    <fullName>Gas_Flush__c</fullName>
    <label>Gas Flush</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N</valueSetName>
    </valueSet>
</CustomField>