force-app/main/default/objects/Request_for_Quote__c/fields/Handle_Die_Cut_or_Punch__c.field-meta.xml
<CustomField>
    <fullName>Handle_Die_Cut_or_Punch__c</fullName>
    <label>Handle Die Cut or Punch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>