force-app/main/default/objects/Request_for_Quote__c/fields/Handle_Location__c.field-meta.xml
<CustomField>
    <fullName>Handle_Location__c</fullName>
    <label>Handle Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>