force-app/main/default/objects/Request_for_Quote__c/fields/Handle_Style__c.field-meta.xml
<CustomField>
    <fullName>Handle_Style__c</fullName>
    <label>Handle Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>raceway</fullName>
            </value>
            <value>
                <fullName>2-finger</fullName>
            </value>
            <value>
                <fullName>banana</fullName>
            </value>
            <value>
                <fullName>kidney</fullName>
            </value>
            <value>
                <fullName>custom</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>