force-app/main/default/objects/Request_for_Quote__c/fields/Hanger_Hole1__c.field-meta.xml
<CustomField>
    <fullName>Hanger_Hole1__c</fullName>
    <label>Hanger Hole</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Sombrero</fullName>
            </value>
            <value>
                <fullName>Circle</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>