force-app/main/default/objects/Request_for_Quote__c/fields/Hanger_Hole__c.field-meta.xml
<CustomField>
    <fullName>Hanger_Hole__c</fullName>
    <label>Hanger Hole (Y/N)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N</valueSetName>
    </valueSet>
</CustomField>