force-app/main/default/objects/Request_for_Quote__c/fields/Hanger_Hole_Type__c.field-meta.xml
<CustomField>
    <fullName>Hanger_Hole_Type__c</fullName>
    <label>Hanger Hole Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Butterfly</fullName>
            </value>
            <value>
                <fullName>PunchOut</fullName>
            </value>
            <value>
                <fullName>Circle</fullName>
                <isActive>false</isActive>
                <label>Circle</label>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
            <value>
                <fullName>Sombrero</fullName>
                <isActive>false</isActive>
                <label>Sombrero</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>