force-app/main/default/objects/Request_for_Quote__c/fields/Hanger_Hole_Type_Other__c.field-meta.xml
<CustomField>
    <fullName>Hanger_Hole_Type_Other__c</fullName>
    <label>Hanger Hole Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>