force-app/main/default/objects/Request_for_Quote__c/fields/Header__c.field-meta.xml
<CustomField>
    <fullName>Header__c</fullName>
    <label>Header</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Header</fullName>
            </value>
            <value>
                <fullName>Reinforced Header</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>