force-app/main/default/objects/Request_for_Quote__c/fields/Header_Length_inches__c.field-meta.xml
<CustomField>
    <fullName>Header_Length_inches__c</fullName>
    <label>Header Length (inches)</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>