force-app/main/default/objects/Request_for_Quote__c/fields/Heat_activated_glue__c.field-meta.xml
<CustomField>
    <fullName>Heat_activated_glue__c</fullName>
    <label>Heat-activated glue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>