force-app/main/default/objects/Request_for_Quote__c/fields/How_Will_Labels_be_Applied__c.field-meta.xml
<CustomField>
    <fullName>How_Will_Labels_be_Applied__c</fullName>
    <label>How Will Labels be Applied</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hand Applied</fullName>
            </value>
            <value>
                <fullName>Machine Applied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>