force-app/main/default/objects/Request_for_Quote__c/fields/How_will_Sleeves_be_applied__c.field-meta.xml
<CustomField>
    <fullName>How_will_Sleeves_be_applied__c</fullName>
    <label>How will Sleeves be applied</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Steam</fullName>
            </value>
            <value>
                <fullName>Radiant Heat</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>