force-app/main/default/objects/Request_for_Quote__c/fields/If_varnish_how_many_floods_and_spots__c.field-meta.xml
<CustomField>
    <fullName>If_varnish_how_many_floods_and_spots__c</fullName>
    <label>If varnish, how many floods and spots</label>
    <length>255</length>
    <type>Text</type>
</CustomField>