force-app/main/default/objects/Request_for_Quote__c/fields/If_Yes_for_Soft_touch_or_Matte_varnish__c.field-meta.xml
<CustomField>
    <fullName>If_Yes_for_Soft_touch_or_Matte_varnish__c</fullName>
    <label>If Yes for Soft-touch or Matte varnish</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full Coverage</fullName>
            </value>
            <value>
                <fullName>Knock-outs</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>