force-app/main/default/objects/Request_for_Quote__c/fields/Include_Freight_in_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Include_Freight_in_Pricing__c</fullName>
    <label>Include Freight in Pricing?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N</valueSetName>
    </valueSet>
</CustomField>