force-app/main/default/objects/Request_for_Quote__c/fields/Interpolated_OH_only__c.field-meta.xml
<CustomField>
    <fullName>Interpolated_OH_only__c</fullName>
    <inlineHelpText>Group A (1,000 / 2,500 / 5,000 / 7,500 / 10,000 / 15,000)
Groups A&amp;B (1,000 / 2,500 / 5,000 / 7,500 / 10,000 / 15,000 / 25,000 / 35,000 / 50,000 / 75,000 / 100,000 / 150,000)
Groups A,B&amp;C (1,000 / 2,500 / 5,000 / 7,500 / 10,000 / 15,000 / 25,000 / 35,000 / 50,000 / 75,000 / 100,000 / 150,000 / 200,000 / 250,000 / 350,000 / 500,000 / 750,000 / 1,000,000)</inlineHelpText>
    <label>Interpolated OH only</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Group A</fullName>
            </value>
            <value>
                <fullName>Groups A&amp;B</fullName>
            </value>
            <value>
                <fullName>Groups A,B&amp;C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>