force-app/main/default/objects/Request_for_Quote__c/fields/Interpolated_Order_Qty__c.field-meta.xml
<CustomField>
    <fullName>Interpolated_Order_Qty__c</fullName>
    <label>Interpolated Order Qty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>