force-app/main/default/objects/Request_for_Quote__c/fields/Label_Area__c.field-meta.xml
<CustomField>
    <fullName>Label_Area__c</fullName>
    <formula>IF( RecordType.DeveloperName = &apos;PS_ONLY&apos;,  Label_Height__c  *  Label_Width__c , IF (RecordType.DeveloperName = &apos;Shrink_Only&apos;, (Layflat_mm__c*2+7) * Cut_Length__c , IF (RecordType.DeveloperName = &apos;Pouches&apos;,  Web_Width__c  *  Cutoff_repeat__c, IF (RecordType.DeveloperName = &apos;Converted_Pouches&apos;,( Finished_Pouch_Height__c*2+ Finished_Pouch_Gusset__c)* Finished_Pouch_Width__c , NULL))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Label Area</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>