force-app/main/default/objects/Request_for_Quote__c/fields/Label_Shape__c.field-meta.xml
<CustomField>
    <fullName>Label_Shape__c</fullName>
    <label>Label Shape</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rectangle</fullName>
            </value>
            <value>
                <fullName>Square</fullName>
            </value>
            <value>
                <fullName>Circle</fullName>
            </value>
            <value>
                <fullName>Oval</fullName>
            </value>
            <value>
                <fullName>Special Shape</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>