force-app/main/default/objects/Request_for_Quote__c/fields/Label_Size_layflat_x_cutlength__c.field-meta.xml
<CustomField>
    <fullName>Label_Size_layflat_x_cutlength__c</fullName>
    <label>Label Size (layflat x cutlength)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>