force-app/main/default/objects/Request_for_Quote__c/fields/Label_Size_width_x_height__c.field-meta.xml
<CustomField>
    <fullName>Label_Size_width_x_height__c</fullName>
    <label>Label Size (width x height)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>