force-app/main/default/objects/Request_for_Quote__c/fields/Label_Width__c.field-meta.xml
<CustomField>
    <fullName>Label_Width__c</fullName>
    <label>Label Width</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>