force-app/main/default/objects/Request_for_Quote__c/fields/Layflat_mm__c.field-meta.xml
<CustomField>
    <fullName>Layflat_mm__c</fullName>
    <label>Layflat (mm)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>