force-app/main/default/objects/Request_for_Quote__c/fields/Liner__c.field-meta.xml
<CustomField>
    <fullName>Liner__c</fullName>
    <label>Liner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>