force-app/main/default/objects/Request_for_Quote__c/fields/Lip__c.field-meta.xml
<CustomField>
    <fullName>Lip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lip</label>
    <type>Checkbox</type>
</CustomField>