force-app/main/default/objects/Request_for_Quote__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <formula>Text(Opportunity__r.Market__c )</formula>
    <label>Market</label>
    <type>Text</type>
</CustomField>