force-app/main/default/objects/Request_for_Quote__c/fields/Max_OD_or_of_Labels_per_roll__c.field-meta.xml
<CustomField>
    <fullName>Max_OD_or_of_Labels_per_roll__c</fullName>
    <label>Max OD or # of Labels per roll</label>
    <length>255</length>
    <type>Text</type>
</CustomField>