force-app/main/default/objects/Request_for_Quote__c/fields/Metallic__c.field-meta.xml
<CustomField>
    <fullName>Metallic__c</fullName>
    <label>Metallic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>