force-app/main/default/objects/Request_for_Quote__c/fields/Moisture_Barrier_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Moisture_Barrier_Requirement__c</fullName>
    <label>Moisture Barrier Requirement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>