force-app/main/default/objects/Request_for_Quote__c/fields/Odor_Absorption_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Odor_Absorption_Concerns__c</fullName>
    <label>Odor Absorption Concerns</label>
    <length>255</length>
    <type>Text</type>
</CustomField>