force-app/main/default/objects/Request_for_Quote__c/fields/of_Plate_Cylinder_Changes_Per_Version__c.field-meta.xml
<CustomField>
    <fullName>of_Plate_Cylinder_Changes_Per_Version__c</fullName>
    <label># of Plate/Cylinder Changes Per Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>