force-app/main/default/objects/Request_for_Quote__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Request for Quote</relationshipLabel>
    <relationshipName>Opportunity_Products</relationshipName>
    <type>Lookup</type>
</CustomField>