force-app/main/default/objects/Request_for_Quote__c/fields/Other_Compliance_Information__c.field-meta.xml
<CustomField>
    <fullName>Other_Compliance_Information__c</fullName>
    <label>Compliance Information Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>