force-app/main/default/objects/Request_for_Quote__c/fields/Other_Compliance_Regulations__c.field-meta.xml
<CustomField>
    <fullName>Other_Compliance_Regulations__c</fullName>
    <label>Other Compliance Regulations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>