force-app/main/default/objects/Request_for_Quote__c/fields/Other_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Other_Concerns__c</fullName>
    <label>Other Concerns</label>
    <length>255</length>
    <type>Text</type>
</CustomField>