force-app/main/default/objects/Request_for_Quote__c/fields/Other_Container_Description__c.field-meta.xml
<CustomField>
    <fullName>Other_Container_Description__c</fullName>
    <label>Other Container Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>