force-app/main/default/objects/Request_for_Quote__c/fields/Other_Contents__c.field-meta.xml
<CustomField>
    <fullName>Other_Contents__c</fullName>
    <label>Other Contents</label>
    <length>255</length>
    <type>Text</type>
</CustomField>