force-app/main/default/objects/Request_for_Quote__c/fields/Other_Finish__c.field-meta.xml
<CustomField>
    <fullName>Other_Finish__c</fullName>
    <label>Other Finish</label>
    <length>255</length>
    <type>Text</type>
</CustomField>